resolve issue on mobile devices

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -522,6 +522,9 @@ body.dark-theme {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+  .nav-logo h2 {
+    font-size: 1.5rem;
+  }
   .nav-links {
     display: none;
     position: absolute;
